@@ -4,9 +4,8 @@ use Moose;
 use namespace::autoclean;
 
 extends 'Catalyst::Action';
-use YAML::Syck;
 
-our $VERSION = '0.93';
+our $VERSION = '0.94';
 $VERSION = eval $VERSION;
 
 sub execute {
